# huppa-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: book.yml  ci.yml
huppa_cli/: cli.py  client.py  credentials.py  schemas.py  server.py
tests/: test_cli.py  test_client.py  test_server.py
