[tool.poetry]
name = "huppa-cli"
version = "0.1.0"
description = "CLI tool and MCP server for Huppa gym class booking"
authors = ["dev"]
readme = "README.md"
packages = [{include = "huppa_cli"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
mcp = ">=1.6,<2.0"
requests = ">=2.32,<3.0"
python-dotenv = ">=1.0,<2.0"
pydantic = ">=2.10,<3.0"
keyring = ">=25.0,<26.0"
click = ">=8.1,<9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pre-commit = "^4"
pytest = ">=8.3,<9.0"
mypy = ">=1.15,<2.0"
types-requests = ">=2.32.0.20240914,<3.0"

[tool.poetry.scripts]
huppa = "huppa_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
files = ["huppa_cli"]
ignore_missing_imports = true
warn_unused_ignores = true
